# image-compress

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: app.py  models.py  tasks.py
src/templates/: base.html  history.html  index.html  progress.html
